# esbuild_client

./: .gitignore  Cargo.toml  LICENSE  README.md  main.tsx
.github/workflows/: ci.yml
crates/esbuild_rs/: Cargo.toml
crates/esbuild_rs/src/protocol/: encode.rs
crates/test_util/: Cargo.toml
src/: flags.rs  lib.rs  main.rs  protocol.rs
src/protocol/: encode.rs  serd.rs
tests/: basic.rs  build_with_errors.rs  common.rs  context.rs  define.rs  integration_test.rs  metafile.rs  plugin_hook.rs
tools/: common.ts  decode.ts  encode.ts
