[package]
name = "esbuild_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
castaway = "0.2.3"
indexmap = { version = "2.9.0", features = ["serde"] }
parking_lot = "0.12.3"
paste = "1.0.15"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.140"
