[package]
name = "esbuild_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
deno_terminal = "0.2.2"
deno_unsync = "0.4.2"
derive_builder = "0.20.2"
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4.27"
parking_lot = "0.12.3"
paste = "1.0.15"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.140"

[profile.release]
lto = true
